# cysqlite

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  demo.py  pwdemo.py  pyproject.toml  setup.py  tests.py  x.py  y.py
.github/workflows/: wheels.yaml
docs/: aio.rst  api.rst  index.rst  installation.rst  sqlite-notes.rst  utils.rst
scripts/: bench.py  bench_aio.py  fetch_sqlcipher  fetch_sqlite  translate_sqlite3h.py
src/: buf.pxd  buf.pyx  conn.pyx  cysqlite.pyx  old.pyx  sqlite.pxi  sqlite3.pxi
src/cysqlite/: __init__.py  _constants.c  _cysqlite.pxd  _cysqlite.pyi  _cysqlite.pyx  aio.py  exceptions.py  metadata.py  sqlite3.pxi  utils.py
