[build-system]
requires = ["setuptools", "wheel", "cython"]

[project]
name = "cysqlite"
dynamic = ["version"]
description = "sqlite3 binding"
readme = "README.md"
authors = [
    { name = "Charles Leifer", email = "coleifer@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/coleifer/cysqlite"
Repository = "https://github.com/coleifer/cysqlite"

[tool.setuptools]
packages = ["cysqlite"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
cysqlite = ["*.pxd", "*.pxi", "*.c"]

[tool.setuptools.dynamic]
version = { attr = "cysqlite.__version__" }

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_i686"
